# CmpGrfOgre

./: README.md  plugins.cfg
lib/: CMakeLists.txt
lib/pujOgre/: Application.cxx  Application.h
resources/: Cylinder.mesh  cyborg_gear.skeleton  cyborg_ninja.material  cyborg_ninja.mesh  cyborg_ninja.mesh.xml  cyborg_ninja.skeleton
src/: CMakeLists.txt  ninja.cxx
